# astream

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: dockerbuild.yml
astream/: main.py
astream/api/: routes.py
astream/config/: settings.py
astream/public/: index.html
astream/scrapers/: base.py
astream/scrapers/animesama/: card_parser.py  catalog.py  client.py  details.py  helpers.py  parser.py  planning.py  player.py  player_extractor.py  season_mapper.py  special_episodes.py  tmdb_episode_mapper.py  video_resolver.py
astream/services/: catalog.py  metadata.py  stream.py
astream/services/tmdb/: client.py  service.py
astream/utils/: cache.py  data_loader.py  database.py  domain_fetcher.py  error_handler.py  filters.py  http_client.py  languages.py  logger.py  parsers.py  stremio_helpers.py  validators.py
